Completes Table III

--- a/classic1.html
+++ b/classic1.html
@@ -403,6 +403,111 @@
       <td><span property="cc:tobs" datatype="xs:float">159</span></td>
       <td><span property="chem:smiles">CC(C)CCC(CCC)C</span></td>
     </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:ZALHPSXXQIPKTQ-UHFFFAOYSA-N">
+      <td><span property="dc:title">2,6-Dimethyloctane</span></td>
+      <td><span property="cc:tobs" datatype="xs:float">160</span></td>
+      <td><span property="chem:smiles">CC(C)CCCC(CC)C</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:KEVMYFLMMDUPJE-UHFFFAOYSA-N">
+      <td><span property="dc:title">2,7-Dimethyloctane</span></td>
+      <td><span property="cc:tobs" datatype="xs:float">160.2</span></td>
+      <td><span property="chem:smiles">CC(C)CCCCC(C)C</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:DBULLUBYDONGLT-UHFFFAOYSA-N">
+      <td><span property="dc:title">3,3-Dimethyloctane</span></td>
+      <td><span property="cc:tobs" datatype="xs:float">161.2</span></td>
+      <td><span property="chem:smiles">CC(CC)(CCCCC)C</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:JEEQUUSFXYRPRK-UHFFFAOYSA-N">
+      <td><span property="dc:title">3,6-Dimethyloctane</span></td>
+      <td><span property="cc:tobs" datatype="xs:float">160.8</span></td>
+      <td><span property="chem:smiles">CC(CC)CCC(CC)C</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:DOYJTLUPPPUSMD-UHFFFAOYSA-N">
+      <td><span property="dc:title">4,5-Dimethyloctane</span></td>
+      <td><span property="cc:tobs" datatype="xs:float">161.0</span></td>
+      <td><span property="chem:smiles">CC(CCC)C(CCC)C</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:ABYGSZMCWVXFCQ-UHFFFAOYSA-N">
+      <td><span property="dc:title">4-n-Propylheptane</span></td>
+      <td><span property="cc:tobs" datatype="xs:float">161.7</span></td>
+      <td><span property="chem:smiles">C(CC)C(CCC)CCC</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:AZLAWGCUDHUQDB-UHFFFAOYSA-N">
+      <td><span property="dc:title">4-Isopropylheptane</span></td>
+      <td><span property="cc:tobs" datatype="xs:float">158.6</span></td>
+      <td><span property="chem:smiles">C(C)(C)C(CCC)CCC</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:DGEMPTLPTFNEHJ-UHFFFAOYSA-N">
+      <td><span property="dc:title">2-Methyl-5-ethylheptane</span></td>
+      <td><span property="cc:tobs" datatype="xs:float">158.4</span></td>
+      <td><span property="chem:smiles">CC(C)CCC(CC)CC</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:HSOMNBKXPGCNBH-UHFFFAOYSA-N">
+      <td><span property="dc:title">3-Methyl-3-ethylheptane</span></td>
+      <td><span property="cc:tobs" datatype="xs:float">156.3</span></td>
+      <td><span property="chem:smiles">CC(CC)(CCCC)CC</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:IIYGOARYARWJBO-UHFFFAOYSA-N">
+      <td><span property="dc:title">2,2,4-Trimethylheptane</span></td>
+      <td><span property="cc:tobs" datatype="xs:float">147</span></td>
+      <td><span property="chem:smiles">CC(C)(CC(CCC)C)C</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:FHJCGIUZJXWNET-UHFFFAOYSA-N">
+      <td><span property="dc:title">2,2,6-Trimethylheptane</span></td>
+      <td><span property="cc:tobs" datatype="xs:float">148.9</span></td>
+      <td><span property="chem:smiles">CC(C)(CCCC(C)C)C</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:QACXEXNKLFWKLK-UHFFFAOYSA-N">
+      <td><span property="dc:title">2,3,3-Trimethylheptane</span></td>
+      <td><span property="cc:tobs" datatype="xs:float">160</span></td>
+      <td><span property="chem:smiles">CC(C)C(CCCC)(C)C</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:IHPXJGBVRWFEJB-UHFFFAOYSA-N">
+      <td><span property="dc:title">2,3,6-Trimethylheptane</span></td>
+      <td><span property="cc:tobs" datatype="xs:float">155.3</span></td>
+      <td><span property="chem:smiles">CC(C)C(CCC(C)C)C</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:QALGVLROELGEEM-UHFFFAOYSA-N">
+      <td><span property="dc:title">2,4,4-Trimethylheptane</span></td>
+      <td><span property="cc:tobs" datatype="xs:float">151</span></td>
+      <td><span property="chem:smiles">CC(C)CC(CCC)(C)C</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:YNLBBDHDNIXQNL-UHFFFAOYSA-N">
+      <td><span property="dc:title">2,4,6-Trimethylheptane</span></td>
+      <td><span property="cc:tobs" datatype="xs:float">147.6</span></td>
+      <td><span property="chem:smiles">CC(C)CC(CC(C)C)C</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:SOYLPZSOEXZMLE-UHFFFAOYSA-N">
+      <td><span property="dc:title">2,5,5-Trimethylheptane</span></td>
+      <td><span property="cc:tobs" datatype="xs:float">152.8</span></td>
+      <td><span property="chem:smiles">CC(C)CCC(CC)(C)C</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:VBZCRMTUDYIWIH-UHFFFAOYSA-N">
+      <td><span property="dc:title">3,4-Diethylhexane </span></td>
+      <td><span property="cc:tobs" datatype="xs:float">160.7</span></td>
+      <td><span property="chem:smiles">C(C)C(CC)C(CC)CC</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:QHLDBFLIDFTHQI-UHFFFAOYSA-N">
+      <td><span property="dc:title">2,2-Dimethyl-4-ethylhexane</span></td>
+      <td><span property="cc:tobs" datatype="xs:float">148</span></td>
+      <td><span property="chem:smiles">CC(C)(CC(CC)CC)C</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:MHPSPNGWFAGBNH-UHFFFAOYSA-N">
+      <td><span property="dc:title">2,2,3,4-Tetramethylhexane</span></td>
+      <td><span property="cc:tobs" datatype="xs:float">156.5</span></td>
+      <td><span property="chem:smiles">CC(C)(C(C(CC)C)C)C</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:KDRZICOOQNIJDN-UHFFFAOYSA-N">
+      <td><span property="dc:title">2,2,4,5-Tetramethylhexane</span></td>
+      <td><span property="cc:tobs" datatype="xs:float">145.8</span></td>
+      <td><span property="chem:smiles">CC(C)(CC(C(C)C)C)C</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:HXQDUXXBVMMIKL-UHFFFAOYSA-N">
+      <td><span property="dc:title">2,2,5,5-Tetramethylhexan</span></td>
+      <td><span property="cc:tobs" datatype="xs:float">136.8</span></td>
+      <td><span property="chem:smiles">CC(C)(CCC(C)(C)C)C</span></td>
+    </tr>
   </table>
       
   <!-- meta data -->
